@@ -1,3 +1,10 @@
+12/01/05 (relf)
+  * file size/offset types changed to off_t
+  * ULL_NO_UL is defined for 32-bit platforms
+  * minor cleanups in mpz-ull.c
+  * rel_list members became unsigned
+  * readRawS32/writeRawS32 definition moved to ggnfs.h
+
 11/16/05 (aSL)
   * Some factLat.pl changes by Mark Rodenkirch
 
